tests/fixtures/positive/supply-chain/convention-plugin-applied-to-wrong-target/settings.gradle.kts
rootProject.name = "convention-plugin-applied-to-wrong-target-positive"

include(":shared")
