tests/fixtures/negative/supply-chain/convention-plugin-applied-to-wrong-target/settings.gradle.kts
rootProject.name = "convention-plugin-applied-to-wrong-target-negative"

include(":androidlib")
